--- a/.github/workflows/deploy-for-review.yml
+++ b/.github/workflows/deploy-for-review.yml
@@ -26,9 +26,9 @@ jobs:
         run: echo "SLUG=$(cat website_out/slug.txt)" >> $GITHUB_ENV
       - name: Print SLUG
         run: echo ${{env.SLUG}}
-        # the post name is the slug minus the "2024-05-07-" prefix
+        # the post name is the slug minus the first 11 characters
       - name: Get post name
-        run: echo "POST_NAME=${{env.SLUG#2024-05-07-}}" >> $GITHUB_ENV
+        run: echo "POST_NAME=${{env.SLUG:11}}" >> $GITHUB_ENV
       - name: Print POST_NAME
         run: echo ${{env.POST_NAME}}
       - name: Get ISSUE_NUMBER
