--- a/.github/workflows/filter-files.yml
+++ b/.github/workflows/filter-files.yml
@@ -3,7 +3,7 @@ name: filter-files
 on:
   pull_request:
     branches:
-      - master
+      - main
 
 # hack for https://github.com/actions/cache/issues/810#issuecomment-1222550359
 #env:
