--- a/.github/workflows/filter-files.yml
+++ b/.github/workflows/filter-files.yml
@@ -56,16 +56,16 @@ jobs:
         echo $FILTEROUT
         echo "offendingfiles=$FILTEROUT" >> $GITHUB_OUTPUT
         python3 bin/filterpaths.py $SLUG ${{ steps.filter.outputs.changed_files }}
-    - uses: actions/github-script@v6
-      if: always() && steps.pythonfilter.outcome == 'failure'
-      with:
-        script: |
-          github.rest.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: "⚠️ **We have detected a problem with your submission!** ⚠️\n\n${{ steps.pythonfilter.outputs.offendingfiles }}\n\nPlease make the aforementioned changes and re-submit :)"
-          })
+    #- uses: actions/github-script@v6
+    #  if: always() && steps.pythonfilter.outcome == 'failure'
+    #  with:
+    #    script: |
+    #      github.rest.issues.createComment({
+    #        issue_number: context.issue.number,
+    #        owner: context.repo.owner,
+    #        repo: context.repo.repo,
+    #        body: "⚠️ **We have detected a problem with your submission!** ⚠️\n\n${{ steps.pythonfilter.outputs.offendingfiles }}\n\nPlease make the aforementioned changes and re-submit :)"
+    #      })
     - name: Setup Ruby
       # if: steps.pythonfilter.outcome == 'success'
       uses: ruby/setup-ruby@v1
