--- a/.github/workflows/filter-files.yml
+++ b/.github/workflows/filter-files.yml
@@ -53,9 +53,14 @@ jobs:
       # todo read from step below
       run: |
         FILTEROUT=$(python3 bin/filterpaths.py $SLUG ${{ steps.filter.outputs.changed_files }} | tail -1)
-        echo $FILTEROUT
+        echo $FILTEROUT >> filterout.txt
         echo "offendingfiles=$FILTEROUT" >> $GITHUB_OUTPUT
         python3 bin/filterpaths.py $SLUG ${{ steps.filter.outputs.changed_files }}
+    - name: Upload error message
+      uses: actions/upload-artifact@v2
+      with: 
+        name: filterout
+        path: filterout.txt
     #- uses: actions/github-script@v6
     #  if: always() && steps.pythonfilter.outcome == 'failure'
     #  with:
