--- a/.github/workflows/filter-files.yml
+++ b/.github/workflows/filter-files.yml
@@ -54,6 +54,7 @@ jobs:
       run: |
         FILTEROUT=$(python3 bin/filterpaths.py $SLUG ${{ steps.filter.outputs.changed_files }} | tail -1)
         echo "offendingfiles=$FILTEROUT" >> $GITHUB_OUTPUT
+        mkdir site_out
         python3 bin/filterpaths.py $SLUG ${{ steps.filter.outputs.changed_files }}
     #- uses: actions/github-script@v6
     #  if: always() && steps.pythonfilter.outcome == 'failure'
@@ -66,17 +67,17 @@ jobs:
     #        body: "⚠️ **We have detected a problem with your submission!** ⚠️\n\n${{ steps.pythonfilter.outputs.offendingfiles }}\n\nPlease make the aforementioned changes and re-submit :)"
     #      })
     - name: Setup Ruby
-      # if: steps.pythonfilter.outcome == 'success'
+      if: steps.pythonfilter.outcome == 'success'
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.0.2'
         bundler-cache: true
     - name: Install deps
-      # if: steps.pythonfilter.outcome == 'success'
+      if: steps.pythonfilter.outcome == 'success'
       run: |
         npm install -g mermaid.cli
     - name: Setup deploy options
-      # if: steps.pythonfilter.outcome == 'success'
+      if: steps.pythonfilter.outcome == 'success'
       id: setup
       run: |
         git config --global user.name "GitHub Action"
@@ -89,7 +90,7 @@ jobs:
         fi
         echo "DEPLOY_BRANCH=gh-pages" >> $GITHUB_OUTPUT
     - name: Build website 
-      # if: steps.pythonfilter.outcome == 'success'
+      if: steps.pythonfilter.outcome == 'success'
       run:  yes | bash bin/build --verbose ${{ steps.setup.outputs.NO_PUSH }}
                     --src ${{ steps.setup.outputs.SRC_BRANCH }} 
                     --deploy ${{ steps.setup.outputs.DEPLOY_BRANCH }} 
@@ -100,6 +101,8 @@ jobs:
       env:
         PR_NUMBER: ${{ github.event.number }}
       run: echo $PR_NUMBER > site_out/pr_number.txt
+    - name: Save filterout
+      run: eche ${{ steps.pythonfilter.outputs.offendingfiles }} > site_out/filterout.txt
     - uses: actions/upload-artifact@v2
       with: 
         name: website_out
