--- a/.github/workflows/comment-on-error.yaml
+++ b/.github/workflows/comment-on-error.yaml
@@ -20,7 +20,8 @@ jobs:
           # name: website_out
           # path: site_out
           search_artifacts: true
-      - name: Get SLUG
+      - run: unzip website_out/site.zip
+      - name: Get filterout
         run: echo "MSG=$(cat website_out/filterout.txt)" >> $GITHUB_ENV
       - uses: actions/github-script@v6
         if: always() && steps.pythonfilter.outcome == 'failure'
@@ -28,8 +29,8 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
            github.rest.issues.createComment({
-             issue_number: context.issue.number,
+             issue_number: ${{ env.ISSUE_NUMBER }},
              owner: context.repo.owner,
              repo: context.repo.repo,
-             body: "⚠️ **We have detected a problem with your submission!** ⚠️\n\n${{ steps.pythonfilter.outputs.offendingfiles }}\n\nPlease make the aforementioned changes and re-submit :)"
+             body: "⚠️ **We have detected a problem with your submission!** ⚠️\n\n${{ env.MSG }}\n\nPlease make the aforementioned changes and re-submit :)"
            })
